2004-04-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GenericFilter.py: Add a generic filter that can take a
	parameter
	* src/PeopleModel.py: Support for top level visibility
	* src/gramps.glade: clean up filtering widgets
	* src/gramps_main.py: build basic filters

2004-04-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: remove unused functions
	* src/DisplayModels.py: filtering support
	* src/GenericFilter.py: filtering support
	* src/PeopleModel.py: support for filtering
	* src/PeopleView.py: support for filtering
	* src/RelLib.py: filtering support
	* src/Utils.py: filtering support
	* src/gramps.glade: remove invert for filters
	* src/gramps_main.py: filtering support

2004-04-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/IndivComplete.py: Convert to db interface.
	* src/plugins/DescendReport.py: Convert to db interface.
	* src/plugins/DetAncestralReport.py: Convert to db interface.

2004-04-24  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/RTFDoc.py: Typo.
	* src/Utils.py (get_xpm_image): Add function.
	* src/plugins/AncestorReport.py (get_xpm_image): Remove 
	function, import it from Utils.py instead. 
	* src/plugins/Ancestors.py (get_xpm_image): Remove function;
	Bring up to the database interface. 
	* src/gramps.glade: Menu improvements.

2004-04-23  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/RTFDoc.py: Completely switch from grampslib.
	* src/docgen/PdfDoc.py: Typo.
	* src/docgen/HtmlDoc.py: Typo.

2004-04-21  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/SelectChild.py (on_save_child_clicked): Corrections.

2004-04-20  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ChooseParents.py: Disallow selecting self as a parent.

2004-04-20  Jason Salaz  <whatsizbucket@comcast.net>
	* src/SelectChild.py: Disallow selecting self as a child.

2004-04-18  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: support for new GTK 2.4 file chooser
