@@ -1252,24 +1252,6 @@
 		      <property name="spacing">6</property>
 
 		      <child>
-			<widget class="GtkButton" id="apply_filter">
-			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Apply filter using the selected controls</property>
-			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Apply</property>
-			  <property name="use_underline">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
-			  <signal name="clicked" handler="on_apply_filter_clicked" object="filter"/>
-			</widget>
-			<packing>
-			  <property name="padding">0</property>
-			  <property name="expand">False</property>
-			  <property name="fill">False</property>
-			</packing>
-		      </child>
-
-		      <child>
 			<widget class="GtkOptionMenu" id="filter_list">
 			  <property name="width_request">200</property>
 			  <property name="visible">True</property>
@@ -1305,6 +1287,24 @@
 			  <property name="padding">0</property>
 			  <property name="expand">True</property>
 			  <property name="fill">True</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkButton" id="apply_filter">
+			  <property name="visible">True</property>
+			  <property name="tooltip" translatable="yes">Apply filter using the selected controls</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">_Apply</property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			  <signal name="clicked" handler="on_apply_filter_clicked" object="filter"/>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
 			</packing>
 		      </child>
 		    </widget>
