@@ -1,3 +1,8 @@
+2004-05-01  Don Allingham  <dona@localhost.localdomain>
+	* src/gramps.glade: rearranged filter apply
+	* src/gramps.py: update to gtk.main()
+	* src/gramps_main.py: goto active person after model built
+
 2004-04-29  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/GenericFilter.py: Add a generic filter that can take a
 	parameter
